# blockchain

./: CONSENSUS_DOCUMENTATION.md  Cargo.toml  Dockerfile  PACKAGE_DOCUMENTATION.md  README.md
CargoOK/: Cargo.toml
bitcoin/: Cargo.toml  README.md
bitcoin-api/: Cargo.toml
bitcoin-api/src/: client.rs  lib.rs  types.rs
bitcoin-desktop-ui/: Cargo.toml
bitcoin-desktop-ui-iced/: Cargo.toml
bitcoin-desktop-ui-iced/src/: view.rs
bitcoin-desktop-ui/src/: api.rs  app.rs  main.rs  runtime.rs  types.rs  update.rs  view.rs
bitcoin-wallet-ui/: Cargo.toml
bitcoin-wallet-ui-iced/: Cargo.toml
bitcoin-wallet-ui-iced/src/: view.rs
bitcoin-wallet-ui/src/: main.rs  view.rs
bitcoin/src/: config.rs  main.rs
book-draft/: 00-Quick-Start.md  01-Introduction.md  Appendix-Source-Reference.md  Bibliography.md  Glossary.md  README.md
book-draft/_project/: BOOK-CONTEXT.md  Book-Marketing-Syndication-Plan.docx  CONSENSUS_DOCUMENTATION.md  Cover-Image-Recommendations.docx  Editing-Process.docx  Pricing-Strategy.docx  Publication-Launch-Guide.docx  Source-File-Mapping.docx  audit_chapter_refs.py  chapter_map.py  check-sync.py
book-draft/bitcoin-blockchain/: 00-Bitcoin-Whitepaper-Summary.md  02-Transaction-System.md  README.md  Rust-Project-Index.md  Tokio.md
book-draft/bitcoin-desktop-ui/: 03-Desktop-Admin-UI.md  03A-Desktop-Admin-UI-Code-Walkthrough.md  03B-Desktop-Admin-UI-Update-Loop.md  03C-Desktop-Admin-UI-View-Layer.md  DeskTop-UI.md
book-draft/bitcoin-desktop-ui-iced/: 03-Desktop-Admin-UI.md  03A-Desktop-Admin-UI-Code-Walkthrough.md  03B-Desktop-Admin-UI-Update-Loop.md  03C-Desktop-Admin-UI-View-Layer.md  04.1-Desktop-Admin-UI-Iced.md  04.1A-Desktop-Admin-UI-Code-Walkthrough.md  04.1B-Desktop-Admin-UI-Update-Loop.md  04.1C-Desktop-Admin-UI-View-Layer.md
book-draft/bitcoin-desktop-ui-tauri/: 04.2-Desktop-Admin-UI-Tauri.md  04.2A-Tauri-Admin-Rust-Backend.md  04.2B-Tauri-Admin-Frontend-Infrastructure.md  04.2C-Tauri-Admin-Frontend-Pages.md
book-draft/bitcoin-wallet-ui/: 04-Wallet-UI.md  04A-Wallet-UI-Code-Listings.md  05-Embedded-Database.md  05A-Embedded-Database-Code-Listings.md  Embeded_DB.md  Wallet-UI.md
book-draft/bitcoin-wallet-ui-iced/: 04-Wallet-UI.md  04A-Wallet-UI-Code-Listings.md  05-Embedded-Database.md  05.1-Wallet-UI-Iced.md  05.1A-Wallet-UI-Code-Listings.md  05A-Embedded-Database-Code-Listings.md
book-draft/bitcoin-wallet-ui-tauri/: 05.2-Wallet-UI-Tauri.md  05.2A-Tauri-Wallet-Rust-Backend.md  05.2B-Tauri-Wallet-Frontend-Infrastructure.md  05.2C-Tauri-Wallet-Frontend-Pages.md
book-draft/bitcoin-web-ui/: 06-Web-Admin-UI.md  06A-Web-Admin-UI-Code-Listings.md  Web-UI.md
book-draft/embedded-database/: 06-Embedded-Database.md  06A-Embedded-Database-Code-Listings.md
book-draft/rust/: 01-Introduction.md  (+18 more)
book-latex/: main.aux  main.idx  main.ist  main.lof  main.lol  main.out  main.tex  main.toc  preamble.tex
ci/: README.md
docs/: Transaction.md
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
tests/: integration_tests.rs  test_helpers.rs
(+1131 files in other folders)
