[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.34.0"
data-encoding = "2.3.2"
env_logger = "0.9.0"
log = "0.4.14"
num-bigint = "0.4.3"
once_cell = "1.9.0"
ring = "0.16.20" # crypto library, based on the crypto primitives from BoringSSL's libcrypto
rust-crypto = "0.2.36" 
rustc-serialize = "0.3.24"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
sled = "0.34.7"
structopt = "0.3.25"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"]}

[dev-dependencies]
assert_cmd = "0.11.0"
