[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = "4.5.41"
data-encoding = "2.9.0"
env_logger = "0.11.8"
log = "0.4.27"
num-bigint = "0.4.6"
once_cell = "1.21.3"
ring = "0.16.20" # crypto library, based on the crypto primitives from BoringSSL's libcrypto
rust-crypto = "0.2.36" 
rustc-serialize = "0.3.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sled = "0.34.7"
structopt = "0.3.26"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"]}

[dev-dependencies]
assert_cmd = "2.0.17"
